# app/Models/SubCategories.php
@@ -6,5 +6,14 @@ use Illuminate\Database\Eloquent\Model;
 
 class SubCategories extends Model
 {
-    //
+  protected $fillable = [
+    'name_en',
+    'name_ar',
+    'description_en',
+    'description_ar',
+    'logo',
+     'category_id',
+    'status',
+];
+
 }
